# SuperAgent

./: README.md  SPEC.md  pyproject.toml
docker/: sandbox.Dockerfile
scripts/: run_api.sh  run_cli.py
src/agent/: config.py  llm_client.py  orchestrator.py  policies.py  prompt_builder.py  runtime.py  transcript.py
src/agent/memory/: summarizer.py  workspace.py
src/agent/sandbox/: docker_sandbox.py
src/agent/tools/: browser.py  files.py  python_exec.py  registry.py  shell_exec.py
src/server/: api.py  worker.py
tests/: test_orchestrator_smoke.py  test_tool_registry.py  test_transcript.py
