[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superagent"
version = "0.1.0"
description = "Scaffold for SuperAgent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SuperAgent" }]
dependencies = [
  "pydantic>=2.0",
  "openai>=1.0",
  "litellm>=1.0",
  "fastapi>=0.110",
  "uvicorn>=0.25",
  "tenacity>=8.0",
]

[project.optional-dependencies]
optional = ["litellm>=1.0"]

test = ["pytest>=7.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
